# smart_positional_encoding

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/smart_positional_encoding/: skeleton.py
src/smart_positional_encoding/postional_encoding/: goal_matrices.py  tuned_encoding.py  vanilla_encoding.py
src/smart_positional_encoding/transformer/: data.py  model.py
tests/: conftest.py  test_skeleton.py
