[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = [
    "setuptools>=46.1.0",
    "setuptools_scm[toml]>=5",
    "torch>=1.13.0+cu116",
    "torchsummary==1.5.1",
    "torchmetrics~=0.11.3",
    "lightning~=2.0.1",

    "numpy~=1.24.2",
    "pandas~=1.5.3",
    "tqdm~=4.65.0",
    "matplotlib>=3.7.1",
    "seaborn~=0.12.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
